--- a/.github/workflows/build-binaries.yaml
+++ b/.github/workflows/build-binaries.yaml
@@ -5,9 +5,35 @@ on: workflow_dispatch
 jobs:
   build-windows:
     runs-on: windows-latest
-    
+
     steps:
-    - name: Test
+    - name: Checkout
+      uses: actions/checkout@v2
+      with:
+        submodules: recursive
+    - name: Install Qt
+      uses: jurplel/install-qt-action@v2
+    - name: Build project
+      shell: cmd
       run: |
-        echo
+        call "%programfiles(x86)%\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
+        qmake
+        nmake
+    - name: Package output
+      run: |
+        mkdir dist
+        mkdir dist/SoETilesViewer
+        dir release
+        cp release/SoETilesViewer.exe dist/SoETilesViewer/
+        cp LICENSE dist/SoETilesViewer/
+        cd dist/SoETilesViewer
+        windeployqt SoETilesViewer.exe
+        dir
+        cd ..
+        Compress-Archive -Path SoETilesViewer -DestinationPath ../SoETilesViewer-win64.zip
+    - name: Store output
+      uses: actions/upload-artifact@v2
+      with:
+        name: SoETilesViewer-win64
+        path: SoETilesViewer-win64.zip
 
